...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp">

        <TextView
            android:id="@+id/tvMostPopularName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{showName}"
            android:textSize="@dimen/text_size_default"
            android:textColor="@color/white"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Nome da série"/>

        <ImageView
            android:id="@+id/ivMostPopularPoster"
            android:layout_width="0dp"
            android:layout_height="112dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:onClick="@{onClickAction}"
            android:scaleType="centerCrop"
...
