...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivSearchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/search_button_content_description"
            app:show="@{!isSearchEnabled &amp;&amp; isSearchButtonEnabled}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearchShow"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background"
            android:imeOptions="actionSearch"
            android:textColor="#FA615E5E"
...
